--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ libc = "0.2.82"
 log = "0.4.6"
 percent-encoding = "2.1.0"
 reqwest = "0.11.3"
-rspotify = "0.8.0"
+rspotify = { version = "0.8.0", optional = true}
 serde = { version = "1.0.115", features = ["derive"] }
 sha-1 = "0.9"
 structopt = "0.3.17"
@@ -47,7 +47,7 @@ env_logger = "0.7"
 [features]
 alsa_backend = ["librespot/alsa-backend", "alsa"]
 dbus_keyring = ["keyring"]
-dbus_mpris = ["dbus", "dbus-tokio", "dbus-crossroads"]
+dbus_mpris = ["dbus", "dbus-tokio", "dbus-crossroads", "rspotify"]
 default = ["alsa_backend"]
 portaudio_backend = ["librespot/portaudio-backend"]
 pulseaudio_backend = ["librespot/pulseaudio-backend"]
